--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Aditya
 middle_name: 
 last_name: Sharma
-contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+contact_note: 
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
@@ -86,8 +85,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: Aditya's blog # blog_name will be displayed in your blog page
+blog_description: welcome to my blog!
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
@@ -263,8 +262,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Sharma]
+  first_name: [Aditya, A.]
 
   style: apa
   locale: en
