--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ _site
 .DS_store
 .ruby-version
 .tweet-cache
-Gemfile.lock
 assets/libs/
-node_modules/
+node_modulesa/
 vendor
 .idea
+assets/json/
